# sigmod-runtime-engine

./: .gitignore  ACTIVE_IMPLEMENTATIONS.md  ADDITIONAL_IMPLEMENTATIONS.md  ARCHITECTURE_DIAGRAMS.md  BENCHMARK_REPORT.md  BENCHMARK_SUMMARY.md  CMakeLists.txt  CMakeListsWithAlgorithmPicking.txt  COMPARISON_TABLE.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_MEASUREMENTS.md  EXECUTIVE_SUMMARY.md  FINAL_COMPREHENSIVE_REPORT.md  GAP_ANALYSIS.md  GAP_ANALYSIS_REPORT.md  MEASUREMENTS.md  OPTIMIZATION_REPORT.md  PARADOTEO_1.md  PARADOTEO_2.md  PARADOTEO_3.md  PERFORMANCE_BREAKDOWN.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  README_ANALYSIS.md  README_OPTIMIZATION.md  README_ORIGINAL.md  README_PART_2.md  README_PART_2.txt  README_εξέταση.md  README_εξέταση.txt  SOFTWARE_TESTER.md  STABILITY_ANALYSIS.md  TELEMETRY_EXPLAINED.md  VERIFIED_ENV_VARS.md  XENOFON1_CHANGES_REPORT.md  hash_results.txt  test  test.cpp  (+1 more)
.github/workflows/: ci.yml  leaderboard.yml  software_tester.yml
Paradoteo1/: README.md  execute_robinhood.cpp
docs/: ADDITIONAL_IMPLEMENTATIONS.md  ARCHITECTURE_DIAGRAMS.md  PARADOTEO_3.md  SOFTWARE_TESTER.md
github/workflows/: ci.yml
include/: bloom_filter.h  column_zero_copy.h  columnar.h  cuckoo.h  cuckoo_map.h  cuckoo_wrapper.h  hardware.h  hash_common.h  hash_functions.h  hashtable_interface.h  hopscotch.h  hopscotch_wrapper.h  inner_column.h  join_bloom_filter.h  join_config.h  join_telemetry.h  late_materialization.h  parallel_unchained_hashtable.h  partition_build.h  partition_hash_builder.h  project_config.h  robinhood.h  robinhood_wrapper.h  slab_allocator.h  temp_allocator.h  three_level_slab.h  unchained_hashtable.h  unchained_hashtable_wrapper.h  work_stealing.h
src/: column_zero_copy.cpp  columnar.cpp  executeGeneric.cpp  execute_2.3.txt  execute_Cuckoo_Hashing  execute_cuckoo  execute_cuckoo.cpp  execute_cuckoo_hashing.cpp  execute_default.cpp  execute_generic.cpp  execute_hopscotch  execute_hopscotch.cpp  execute_robinhood.cpp  execute_unchained_hashtable.cpp  join_telemetry.cpp  late_materialization.cpp  slab_allocator.cpp  temp_allocator.cpp  work_stealing.cpp
tests/: indexing_optimization_tests.cpp  software_tester.cpp  test_all.cpp  test_framework.h  test_unchained_hashtable.cpp
tests/software_tester/: bloom_filter_tests.cpp  columnar_tests.cpp  hashtable_algorithms_tests.cpp  indexing_optimization_tests.cpp  late_materialization_tests.cpp  partitioned_build_tests.cpp  slab_allocator_tests.cpp  work_stealing_tests.cpp  zero_copy_int32_tests.cpp
